<resources>
    <string name="app_name">FrutiApp</string>
    <string name="txt_nombre">¿Cómo te llamas?</string>
    <string name="btn_jugar">Jugar</string>
    <string name="txt_view"></string>

    <string name="edit_txt_manzanas">Manzanas restantes: </string>
    <string name="txt_view_jugador">Jugador: </string>
    <string name="txt_view_score">Puntos: 0</string>
    <string name="btn_comprobar">Comprobar</string>
    <string name="edit_txt_respuesta">Respuesta</string>
</resources>